--- a/content/day01/BlockyGrid/index.html
+++ b/content/day01/BlockyGrid/index.html
@@ -67,7 +67,7 @@
         1 / (window.innerWidth+1),
         1 / (window.innerHeight+1)
         );
-        composer.addPass(effectFXAA);
+        //composer.addPass(effectFXAA);
 
         // Objects
         const directionalLight = new THREE.DirectionalLight( 0xffffff, 1 );
