--- a/content/day02/iso_stature/index.html
+++ b/content/day02/iso_stature/index.html
@@ -13,6 +13,7 @@
     <script src="../../../template_three/js/rendering/customRenderer.js"></script>
     <script src="../../../template_three/js/rendering/customToonMaterial.js"></script>
     <script src="../../../template_three/js/rendering/customColorsMaterial.js"></script>
+    <script src="../../../template_three/js/tween/tween.umd.js"></script>
     <div id="joyDiv"></div>
     <script type="module">
         import { EffectComposer } from '../../../template_three/js/three/EffectComposer.js';
@@ -22,20 +23,25 @@
         import { CustomOutlinePass } from '../../../template_three/js/rendering/customPostProcess.js';
       
         let camPos = {
-            coords : new THREE.Vector3(0, 0, 5),
-            direction : new THREE.Vector3(0, 0, -1)
+            coords : new THREE.Vector3(20, 20, 20),
+            direction : new THREE.Vector3(0, 0, 0)
         }
         const yAxies = new THREE.Vector3(0, 1, 0)
 
         // Setup
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x212121);
-        const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 100);
+        const camera = new THREE.OrthographicCamera( innerWidth / - 2, innerWidth / 2, innerHeight / 2, innerHeight / - 2, 0.1, 1000);
+        camera.zoom = 40
+        camera.updateProjectionMatrix();
         const renderer = customRenderer(THREE, camera, scene);
         const stats = createStats();
+        camera.position.set(camPos.coords.x, camPos.coords.y, camPos.coords.z);
+        camera.lookAt(camPos.direction)
+        //camera.rotation.z = -Math.PI
 
         document.body.appendChild(renderer.domElement);
-        document.body.appendChild(stats.domElement);
+        //document.body.appendChild(stats.domElement);
 
         // Post Processing
         const depthTexture = new THREE.DepthTexture();
@@ -59,41 +65,44 @@
         scene,
         camera
         );
-        composer.addPass(customOutline);
+        //composer.addPass(customOutline);
 
         // Antialias pass.
         const effectFXAA = new ShaderPass(FXAAShader);
         effectFXAA.uniforms["resolution"].value.set(
-        1 / (window.innerWidth+1),
-        1 / (window.innerHeight+1)
+        1 / (window.innerWidth),
+        1 / (window.innerHeight)
         );
         //composer.addPass(effectFXAA);
 
         // Objects
         const directionalLight = new THREE.DirectionalLight( 0xffffff, 1 );
+        directionalLight.position.set(0, -10, 100)
         scene.add( directionalLight );
 
-       createScene(THREE, scene);
+       createScene(THREE, scene, camera);
+
+       function render() {
+            composer.render();
+            stats.update();
+        }
 
         // Animate
         let now;
         let prev;
         let deltaTime;
         let angle;
+        let i = 0;
         function animate() {
-            requestAnimationFrame(animate);
+            //requestAnimationFrame(animate);
             prev = now;
             now = Date.now();
             deltaTime = (now - prev) / 1000;
-            camera.getWorldDirection( camPos.direction );
-            camPos.direction.normalize();
-
-            camera.position.set(camPos.coords.x, camPos.coords.y, camPos.coords.z);
 
             myAnimation();
+            //TWEEN.update();
 
-            composer.render();
-            stats.update();
+            render();
         };
         animate();
 
