--- a/content/day02/isometric/index.html
+++ b/content/day02/isometric/index.html
@@ -41,7 +41,7 @@
         //camera.rotation.z = -Math.PI
 
         document.body.appendChild(renderer.domElement);
-        document.body.appendChild(stats.domElement);
+        //document.body.appendChild(stats.domElement);
 
         // Post Processing
         const depthTexture = new THREE.DepthTexture();
