--- a/content/audioVisualizer/audioVisualizer/index.html
+++ b/content/audioVisualizer/audioVisualizer/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <title>AbstractFaces | Mattia Metry | GENCG</title>
+    <title>AudioVisualizer | Mattia Metry | GENCG</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js"></script>
     <meta charset="utf-8" />
     <style>
       html, body {
@@ -27,13 +27,8 @@
     </style>
   </head>
   <body>
-    <button onclick="setFace();">SetFace</button>
     <main>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core@1.7.4/dist/tf-core.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter@1.7.4/dist/tf-converter.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh@0.0.3/dist/facemesh.min.js"></script>
-    <script src="landmarks.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
