--- a/content/day04/flyToDraw/index.html
+++ b/content/day04/flyToDraw/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Mattia Metry - GENCG</title>
+    <title>FlyToDraw | Mattia Metry | GENCG</title>
     <link rel="stylesheet" href="../../../template_three/style/style.css">
 </head>
 
